# fast-api-starter-template

./: .env.example  .gitignore  .pre-commit-config.yaml  LOGGING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/routes/: users.py
app/core/: config.py  exceptions.py  logging.py  middleware.py
app/db/: database.py
app/models/: user.py
app/services/: user_service.py
app/utils/: helpers.py
